--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -239,9 +239,11 @@ Si utilizza Firebug, un estensione di Firefox che consente di effettuare il debu
 \subsezione{Librerie Javascript}
 Si \` e scelto di utilizzare jQuery (\href{http://jquery.com/}{http://jquery.com/}) nella sua ultima versione (1.3.1), una libreria JavaScript veloce e concisa che semplifica l'attraversamento del documento HTML, la gestione degli eventi, le animazioni, e le interazioni Ajax per un rapido sviluppo web. Oltre alla libreria base, si utilizzano anche i seguenti plugins:
  \begin{elencopuntato}[\normindent]
-    \item[-] \textit{jquery.tooltip}  (\href{http://bassistance.de/jquery-plugins/jquery-plugin-tooltip/}{http://bassistance.de/jquery-plugins/jquery-plugin-tooltip/}): per visualizzare un tooltip a comparsa descrittivo della funzione effettuata dall'oggetto grafico sul quale \` e posizionato il cursore;
-    \item[-]\textit{ jquery.browser}  (\href{http://jquery.thewikies.com/browser/}{http://jquery.thewikies.com/browser/}): per aiutare nel riconoscimento dei dettagli del broswser utilizzato, consentendo al programma di adattarsi quindi al client cambiando foglio di stile adottato e funzionalit\` a disponibili;
-    \item[-]\textit{ farbtastic} (\href{http://acko.net/dev/farbtastic}{http://acko.net/dev/farbtastic}) : per aggiungere una o pi\` u ruote per la selezione del colore alla pagina;
+    \item[-] \textit{jquery.tooltip}  (\href{http://bassistance.de/jquery-plugins/jquery-plugin-tooltip/}{http://bassistance.de/jquery-plugins/jquery-plugin-tooltip/}) per visualizzare un tooltip a comparsa descrittivo della funzione effettuata dall'oggetto grafico sul quale \` e posizionato il cursore;
+    \item[-]\textit{jquery.browser}  (\href{http://jquery.thewikies.com/browser/}{http://jquery.thewikies.com/browser/}) per aiutare nel riconoscimento dei dettagli del broswser utilizzato, consentendo al programma di adattarsi quindi al client cambiando foglio di stile adottato e funzionalit\` a disponibili;
+    \item[-]\textit{farbtastic} (\href{http://acko.net/dev/farbtastic}{http://acko.net/dev/farbtastic}) per aggiungere una o pi\` u ruote per la selezione del colore alla pagina;
+    \item[-]\textit{canvastext} (\href{http://jim.studt.net/canvastext/}{http://jim.studt.net/canvastext/}) per permettere di disegnare caselle di testo anche sui browser che non supportano tale funzionalit\` a;
+     \item[-]\textit{menu-for-applications} (\href{http://www.dhtmlgoodies.com/scripts/menu-for-applications/demos/demo-menu-bar.html}{dhtmlgoodies.com/scripts/menu-for-applications/}) per avere a disposizione una comoda barra nella parte alta della pagina utile per richiamare le funzioni pi\` u varie.
   \end{elencopuntato}
 
 \sezione{Stile del codice}
