--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -258,7 +258,7 @@ Sono raggruppabili in 3 categorie:
 
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item \textit{Test di unit\`a}
-: realizzati tramite il software QUnit. Hanno l'obiettivo di considerare un piccola frazione del software per testare se tale porzione funziona come dovrebbe. Il verificatore o chiunque altro esegui questo test dovr\`a constatare che il comportamento della porzione di software testato rispetti tutti i vincoli dell'Analisi dei Requisiti. \`E necessario prestare attenzione in quanto superficialit\`a e distrazione umana possono rendere inefficaci e inutili questi test.
+: realizzati tramite il software QUnit. Hanno l'obiettivo di considerare un piccola frazione del software per testare se tale porzione funziona come dovrebbe. Il verificatore o chiunque altro esegua questo test dovr\`a constatare che il comportamento della porzione di software testato rispetti tutti i vincoli dell'Analisi dei Requisiti. \`E necessario prestare attenzione in quanto superficialit\`a e distrazione umana possono rendere inefficaci e inutili questi test.
 \item \textit{Test di copertura}
 : realizzati tramite il software JSCoverage. Verificano che i test di Unit\`a siano stati effettuati sull'intera porzione di software stabilita. Hanno l'obiettivo di testare se sono state saltate righe di codice. Utile per garantire l'efficacia dei test di Unit\`a. 
 Il verificatore o chiunque altro esegui questo test dovr\`a constatare che tutte le righe di codice siano state coperte nel precedente test di unit\`a, altrimenti sar\`a necessario ripetere e riutilizzare il software QUnit.
@@ -279,7 +279,7 @@ Per determinare il numero di test da effettuare su un porzione di software da te
 Quando un'anomalia viene riscontrata durante una verifica, il verificatore provveder\`a ad aggiungere un ticket al sistema di bug tracking e a segnalarlo, usando i metodi sopra esposti, a chi dovr\`a correggere il problema. La segnalazione dell'errore dovr\`a contenere una descrizione chiara del problema riscontrato. Qualora il correttore trovasse poco chiara o ambigua la descrizione, o fosse in disaccordo con la stessa, aprir\`a una discussione con il verificatore nel gruppo di discussione interno. A correzione avvenuta, questo sar\`a segnalato al verificatore tramite il gruppo di discussione. Il verificatore applicher\`a nuovamente il procedimento di verifica alla correzione. Se quest'ultimo passo va a buon fine, il correttore porr\`a come risolto il ticket nel sistema di bug tracking.
  
 \subsezione{Trattamento delle discrepanze}
-Qualora un prodotto si discostasse da quanto descritto nell'analisi dei requisiti, il responsabile della qualit\`a provveder\`a a individuare la causa e la persona, o le persone, imputabili per la discrepanza. Il responsabile della qualit\`a, dopo averne discusso con lui, o loro, traccier\`a delle azioni correttive e si assicurer\`a che vengano attuate.
+Qualora un prodotto si discostasse da quanto descritto nell'analisi dei requisiti, il responsabile della qualit\`a provveder\`a a individuare la causa e la persona, o le persone, imputabili per la discrepanza. Il responsabile della qualit\`a, dopo averne discusso con lui, o loro, traccer\`a delle azioni correttive e si assicurer\`a che vengano attuate.
  
 \subsezione{Procedure di controllo di qualit\`a di processo}
 L'amministratore del progetto deve assicurarsi che gli standard descritti nelle \textit{NormeDiProgetto} siano rispettati e deve segnalare eventuali infrazioni al responsabile, in modo che provveda a risolverle. Il responsabile della qualit\`a controlla che le attivit\`a di verifica vengano svolte, e che seguano le procedure descritte in questo documento.
