correzioni generali MU

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -145,9 +145,9 @@ Il presente documento si propone di fornire la documentazione di supporto necess
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
           0.3 & 6/03/09  Inserimento descrizione funzionale lato server & Dal Bosco Davide \\
           \hline
-          0.2 & 5/03/09 Rifinitura Inserimento descrizione funzionale lato client, descrizione Bezier e Dialogs & Rizzo Maurizio \\
+          0.2 & 5/03/09 Rifinitura, Inserimento descrizione funzionale lato client Bezier e Dialogs & Rizzo Maurizio \\
           \hline
-          0.1 & 5/03/09 Inserimento descrizione funzionale lato client Toolbar & Carollo Mirco \\
+          0.1 & 5/03/09 Inserimento descrizione funzionale lato client Toolbar e Menu & Carollo Mirco \\
     	  \hline
     	  0.0 & 27/02/2008 Prima stesura & \\
 
