--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.3} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.4} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Manuale Utente} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -143,11 +143,13 @@ Il presente documento si propone di fornire la documentazione di supporto necess
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-          0.3 & 6/03/09  Inserimento descrizione funzionale lato server & Dal Bosco Davide \\
+          0.4 & 05/03/09  Inserimento manuale di Tomcat per sistemi Linux & Dal Bosco Davide \\
           \hline
-          0.2 & 5/03/09 Rifinitura, Inserimento descrizione funzionale lato client Bezier e Dialogs & Rizzo Maurizio \\
+          0.3 & 05/03/09  Inserimento manuale di Tomcat per sistemi Windows & Dal Bosco Davide \\
           \hline
-          0.1 & 5/03/09 Inserimento descrizione funzionale lato client Toolbar e Menu & Carollo Mirco \\
+          0.2 & 04/03/09 Rifinitura, Inserimento descrizione funzionale lato client Bezier e Dialogs & Rizzo Maurizio \\
+          \hline
+          0.1 & 04/03/09 Inserimento descrizione funzionale lato client Toolbar e Menu & Carollo Mirco \\
     	  \hline
     	  0.0 & 27/02/2008 Prima stesura & \\
 
@@ -206,7 +208,7 @@ funzionalit\`a. Il sistema permette un salvataggio dei disegni che potranno esse
 N.B. Dove non \`e supportato il testo, c'\`e un supporto minimo: un solo font, colore di riempimento ignorato, set di caratteri minimo. 
     \item[-] Requisiti hardware:  Processore Intel 2GHz o compatibili; 512MB memoria RAM 
 \end{elencopuntato}
-\subsubsezione{Lato server}
+\subsubsezione{lato server}
 \begin{elencopuntato}[\normindent]
     \item[-] Requisiti software:  \underline{JVM} 1.5 o superiore, Apache \underline{Tomcat} 6.0 o superiore.
     \item[-] Requisiti hardware:  Processore Intel 1GHz; 1GB memoria RAM
@@ -219,21 +221,17 @@ N.B. Dove non \`e supportato il testo, c'\`e un supporto minimo: un solo font, c
 Il programma non necessita di installazione. 
 
 \subsubsezione{Lato server}
-
-Per permettere il funzionamento del sistema, \`e necessario installare un Web Server: Apache Tomcat. Oltre ad essere un Web Server, Tomcat \`e anche un
-Application Server, cio\`e una piattaforma per l'esecuzione di applicazioni Web sviluppate nel linguaggio Java.\\
+Per permettere il funzionamento del sistema, \`e necessario installare un Web Server: Apache Tomcat. Oltre a essere un Web Server, Tomcat \`e anche un
+Application Server, cio\`e una piattaforma per l'esecuzione di applicazioni web sviluppate nel linguaggio Java.\\
+Prima di tutto \`e necessario disporre di una Java Virtual Machine. Per il download visitare il link del sito ufficiale della Sun Microsystem:\\
+http://java.com/download/index.jsp\\
 \\
-Prima di tutto \`e necessario disporre di una Java Virtual Machine. Per il download visitare il link al sito ufficiale della Sun Microsystem:\\
-\href{http://java.com/download/index.jsp}{http://java.com/download/index.jsp}\\
-\\
-Per effettuare il download di Apache Tomcat 6.0 seguire il link del sito ufficiale: \href{http://tomcat.apache.org/download-60.cgi}{http://tomcat.apache.org/download-60.cgi}\\
-
+Per effettuare il download di Apache Tomcat 6.0 andare al link del sito ufficiale \textit{http://tomcat.apache.org/download-60.cgi}\\
 Nella sezione \textit{Binary Distribution} della pagina web, \`e possibile effettuare il download sia per sistemi Windows che per sistemi Linux.\\
+\\\\
+\indent{\underline{\textbf{Installazione su sistemi Windows}}}\\
 \\
-\indent{\textbf{Installazione su sistemi Windows:}}\\
-
-Terminato il download, aprire il file scaricato per iniziare l'installazione.\\
-\\
+Terminato il download, fare doppio click sul file scaricato per iniziare l'installazione.\\
 La schermata \`e la seguente:
 
 \begin{figure}[!ht]
@@ -242,7 +240,7 @@ La schermata \`e la seguente:
 \caption{Setup Wizard Apache Tomcat}
 \end{figure} 
 
-Premere \textit{Next} per proseguire e accettare la licenza.
+Premere \textit{Next} per andare avanti e accettare la licenza.
 Giunti alla schermata per la scelta della cartella di installazione, mantenere quella indicata di default.
 
 \begin{figure}[!ht]
@@ -253,10 +251,8 @@ Giunti alla schermata per la scelta della cartella di installazione, mantenere q
 \newpage
 
 Premere \textit{Next}, e si presenter\`a la finestra di configurazione di Tomcat:
-Alla voce \textit{http/1.1 Connector Port} mantenere il valore di default (solitamente 8080), quindi impostare Username e Password, necessarie per accedere alla configurazione di Tomcat.\\
+Alla voce \textit{http/1.1 Connector Port} lasciare il valore di default (di solito 8080), quindi impostare una User Name e Password a scelta, necessarie per accedere alla configurazione di Tomcat.\\
 Quindi premere \textit{Next}.
-
-
 
 \begin{figure}[!ht]
 \centering
@@ -264,9 +260,9 @@ Quindi premere \textit{Next}.
 \caption{Configuration}
 \end{figure} 
 
-
-Nella schermata successiva, \`e necessario indicare il percorso dell'installazione della Java Virtual Machine (J2SE). Se g\`a  installata, mantenere il percorso di default indicato. Per completare l'installazione, cliccare su \textit{Install}.
-
+Nella schermata successiva, \`e necessario indicare il percorso dell'installazione della Java Virtual Machine (J2SE). Se gia installata, lasciare il percorso di default
+indicato.
+Per completare l'installazione, premere su \textit{Install}.
 
 \begin{figure}[!ht]
 \centering
@@ -274,102 +270,25 @@ Nella schermata successiva, \`e necessario indicare il percorso dell'installazio
 \caption{Java Virtual Machine}
 \end{figure} 
 
-\indent{\textbf{Installazione su sistemi Linux:}}\\
+\indent{\underline{\textbf{Installazione su sistemi Linux}}}\\
+\\
+Scaricato il .tar.gz, estrarre il contenuto su una cartella.
+Non \`e necessaria una installazione vera e propria e per la sua esecuzione si rimanda al paraggrafo \textit{Avvio del programma} sezione \textit{Linux}.
 
-%\subsezione{Avvio del programma}
-%\subsubsezione{Lato client}
-%\`E sufficiente aprire la pagina web con un browser supportato. L'indirizzo dipende dall'host nel quale viene installato il web server.
-%\subsubsezione{Lato server}
-%Sono presenti due sezioni per effettuare l'avvio su sistemi Windows e su sistemi Linux.\\ \\ \\
-%\indent{\textbf{Avvio del programma su sistemi Windows:}}\\
-%Per l'avvio del web server, andare su \textit{Start-$ > $Programmi-$ > $Apache Tomcat 6.0} e avviare \textit{Monitor Tomcat}.
-%Nella barra delle applicazioni in esecuzione, apparir\`a l'icona che indica l'avvio di Tomcat.\\
-%A questo punto avviare un browser e digitare il seguente indirizzo:\\ 
-%\href{http://localhost:8080/manager/html}{http://localhost:8080/manager/html}\\
-%Dopo aver inserito Username e Password richiesti, si entrer\`a nell'area di gestione di Tomcat.\\
-%Andare nella sezione \textit{WAR file to deploy} della pagina.\\
-
-Scaricato il .tar.gz, estrarre il contenuto in una cartella. \\
-Aprire una shell e posizionarsi sulla cartella estratta. \\
-A questo punto \`e necessario provare ad avviare il processo di Tomcat. Per farlo, eseguire i seguenti comandi:\\
-
-\textit{cd bin}\\
-\textit{./catalina.sh start}\\
-
-Se tutto \`e andato per il meglio, dovrebbe comparire una scritta tipo\\
-Using CATALINA{\_}BASE: /home/red/apache-tomcat-6.0.14\\ 
-Using CATALINA{\_}HOME: /home/red/apache-tomcat-6.0.14\\
-Using CATALINA{\_}TMPDIR: /home/red/apache-tomcat-6.0.14/temp\\
-Using JRE{\_}HOME: /usr/lib/jvm/java-6-sun-1.6.0.03\\
-
-Avviare un browser e inserire l'indirizzo \textit{http://localhost:8080}\\
-Se compare la pagina principale di Tomcat, significa il Web Server funziona correttamente.\\
-A questo punto, \`e necessario procedere alla configurazione dell'utente amministratore per poter usare il Tomcat Manager.\\
-Per fare questo, da shell, spostarsi nella cartella principale di Tomcat ed eseguire i seguenti comandi:\\
-\textit{cd conf}\\
-\textit{sudo gedit tomcat-users.xml}\\
-Sostituire il file aperto, con il seguente codice:\\
-< ?xml version='1.0' encoding='utf-8'?\> \\
-<tomcat-users>\\
-  <role rolename="manager"/>\\
-  <role rolename="admin"/>\\
-  <user username="admin" password="admin" roles="manager"/>\\
-</tomcat-users> \\
-
-In questo modo \`e stato impostato uno User Name con valore \textit{admin} e una Password con valore \textit{admin}. Queste credenziali sono da usare per accedere al Tomcat Manager.\\
+\subsezione{Avvio del programma}
+\subsubsezione{Lato client}
+\`E sufficiente aprire la pagina web con un browser supportato. L'indirizzo dipende dall'host in cui viene installato il server.
+-\subsubsezione{Lato server}
+Sono presenti due sezioni per effettuare l'avvio su sistemi Windows e su sistemi Linux.\\
+\\\\
+\indent{\underline{\textbf{Avvio del programma su sistemi Windows}}}\\
+\\
+Per l'avvio del server, andare su \textit{Start-$ > $Programmi-$ > $Apache Tomcat 6.0} e avviare \textit{Monitor Tomcat}.
+Nella barra delle applicazioni in esecuzione, apparir\`a l'icona che indica l'avvio di Tomcat.\\
 A questo punto avviare un browser e digitare il seguente indirizzo\\ \textit{http://localhost:8080/manager/html}\\
 Dopo aver inserito User Name e Password richiesti, si entrer\`a nel manager di Tomcat.\\
-Andare nella sezione \textit{WAR file to deploy} della pagina.
+Andare nella sezione \textit{WAR file to deploy} della pagina.\\
 
-\newpage
-
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.7]{images/DeployTomcat.png}
-\caption{Deploy}
-\end{figure} 
-
-
-Selezionare il file \textit{.war} dell'applicazione e quindi cliccare su \textit{Deploy}.\\
-A questo punto nella cartella \textit{webapps} della cartella di installazione di Tomcat sar\`a presente l'applicazione AJAXDRAW pronta per la sua esecuzione.\\ 
-\\\\
-\indent{\textbf{Avvio del programma su sistemi Linux:}}\\
-Aprire una shell e posizionarsi sulla cartella di Apache Tomcat (precedentemente estratta).
-A questo punto \`e necessario provare ad avviare il processo di Tomcat. Per farlo, eseguire i seguenti comandi:\\
-\\
-\textit{cd bin}\\
-\textit{./catalina.sh start}\\
-
-Se tutto \`e andato per il meglio, dovrebbero comparire i path di CATALINA e JRE.\\
-%Using CATALINA_BASE: /home/red/apache-tomcat-6.0.14\\
-%Using CATALINA\{_}HOME: /home/red/apache-tomcat-6.0.14\\
-%Using CATALINA\{_}TMPDIR: /home/red/apache-tomcat-6.0.14/temp\\
-%Using JRE\{_}HOME: /usr/lib/jvm/java-6-sun-1.6.0.03\\
-\\
-Avviare un browser e inserire l'indirizzo \href{http://localhost:8080}{http://localhost:8080}.\\
-Se compare la pagina principale di Tomcat, significa che il Web Server funziona correttamente.
-A questo punto, \`e necessario procedere alla configurazione dell'utente amministratore per poter utilizzare il Tomcat Manager.
-Per fare questo, da shell, spostarsi nella cartella principale di Tomcat ed eseguire i seguenti comandi:\\
-\\
-\textit{cd conf}\\
-\textit{sudo gedit tomcat-users.xml}\\
-\\
-Sostituire il contenuto del file aperto con il seguente codice:\\
-\\
-\textit{$ < $?xml version='1.0' encoding='utf-8'?$ > $}\\
-\textit{$ < $tomcat-users$ > $}\\
-\textit{  $ < $role rolename='manager'/$ > $}\\
-\textit{  $ < $role rolename='admin'/$ > $}\\
-\textit{  $ < $user username='admin' password='admin' roles='manager'/$ > $}\\
-\textit{$ < $/tomcat-users$ > $} \\
-\\
-In questo modo \`e stato impostato uno Username con valore \textit{admin} e una Password con valore \textit{admin}. Queste credenziali possono essere utilizzate per accedere al Tomcat Manager.\\
-A questo punto avviare un browser e digitare il seguente indirizzo\\ \href{http://localhost:8080/manager/html}{http://localhost:8080/manager/html}\\
-Dopo aver inserito Username e Password richiesti, si acceder\` a al manager di Tomcat.\\
-Raggiungere la sezione \textit{WAR file to deploy} della pagina.
-
-
-\newpage
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.7]{images/DeployTomcat.png}
@@ -377,10 +296,58 @@ Raggiungere la sezione \textit{WAR file to deploy} della pagina.
 \end{figure} 
 
 Selezionare il file .war dell'applicazione e quindi premere su Deploy.\\
+A questo punto nella cartella \textit{webapps} della cartella di installazione di Tomcat sar\`a presente l'applicazione AJAXDRAW pronta per la sua esecuzione.\\
+\\\\
+\\\\
+\indent{\underline{\textbf{Avvio del programma su sistemi Linux}}}\\
+\\
+Aprire una shell e posizionarsi sulla cartella di Apache Tomcat (precedentemente estratta).
+A questo punto \`e necessario provare ad avviare il processo di Tomcat. Per farlo, eseguire i seguenti comandi:\\
+\\
+\textit{cd bin}\\
+\textit{./catalina.sh start}\\
+\\
+Se tutto \`e andato per il meglio, dovrebbero comparire delle scritte simili alle seguenti:\\
 
-\newpage
+\textit{Using CATALINA{\_}BASE: /home/red/apache-tomcat-6.0.14}\\
+\textit{Using CATALINA{\_}HOME: /home/red/apache-tomcat-6.0.14}\\
+\textit{Using CATALINA{\_}TMPDIR: /home/red/apache-tomcat-6.0.14/temp}\\
+\textit{Using JRE{\_}HOME: /usr/lib/jvm/java-6-sun-1.6.0.03}\\
+\\
+Ora, avviare un browser e inserire l'indirizzo \textit{http://localhost:8080}\\
+Se compare la pagina principale di Tomcat, significa che il Web Server funziona correttamente.
+A questo punto, \`e necessario procedere alla configurazione dell'utente amministratore per poter usare il Tomcat Manager.
+Per fare questo, da shell, spostarsi nella cartella principale di Tomcat ed eseguire i seguenti comandi:\\
+\\
+\textit{cd conf}\\
+\textit{sudo gedit tomcat-users.xml}\\
+\\
+Sostituire il file aperto, con il seguente codice:\\
+\\
+\textit{$ < $?xml version='1.0' encoding='utf-8'?$ > $}\\
+\textit{$ < $tomcat-users$ > $}\\
+\textit{ $ < $role rolename='manager'/$ > $}\\
+\textit{ $ < $role rolename='admin'/$ > $}\\
+\textit{ $ < $user username='admin' password='admin' roles='manager'/$ > $}\\
+\textit{$ < $/tomcat-users$ > $} \\
+\\
+In questo modo \`e stato impostato uno User Name con valore \textit{admin} e una Password con valore \textit{admin}. Queste credenziali sono da usare per accedere al Tomcat Manager.\\
+A questo punto avviare un browser e digitare il seguente indirizzo\\ \textit{http://localhost:8080/manager/html}\\
+Dopo aver inserito User Name e Password richiesti, si entrer\`a nel manager di Tomcat.\\
+Andare nella sezione \textit{WAR file to deploy} della pagina.\\
 
-A questo punto nella cartella \textit{webapps} della cartella di installazione di Tomcat sar\`a presente l'applicazione AJAXDRAW pronta per la sua esecuzione. 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.7]{images/DeployTomcat.png}
+\caption{Deploy}
+\end{figure} 
+
+Selezionare il file .war dell'applicazione e quindi premere su Deploy.\\
+Per chiudere Tomcat, posizionarsi via shell sulla cartella di installazione e inviare i seguenti comandi:\\
+\\
+\textit{cd bin}\\
+\textit{./catalina.sh stop}\\
+\\
 
 
 
