MU: rimosso IE8

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -205,7 +205,7 @@ funzionalit\`a. Il sistema permette un salvataggio dei disegni che potranno esse
 \subsezione{Requisiti tecnici per il funzionamento del programma}
 \subsubsezione{Lato client}
 \begin{elencopuntato}[\normindent]
-    \item[-] Requisiti software: Firefox 3.1b2 o successivo, Firefox 3.0.6 tutto tranne il disegno di testo, Opera 9.6 tutto tranne il disegno di testo, Chrome (versione attuale), Safari (versione attuale), IE8: tutto tranne il testo e la selezione che risulta non essere ottimale.\\
+    \item[-] Requisiti software: Firefox 3.1b2 o successivo, Firefox 3.0.6 tutto tranne il disegno di testo, Opera 9.6 tutto tranne il disegno di testo, Chrome (versione attuale), Safari (versione attuale): tutto tranne il testo e la selezione che risulta non essere ottimale.\\
     Risoluzione minima consigliata: 1024x768.\\
 N.B. Dove non \`e supportato il testo, c'\`e un supporto minimo: un solo font, colore di riempimento ignorato, set di caratteri minimo.
     \item[-] Requisiti hardware: Processore Intel 2GHz o compatibili; 512MB memoria RAM
