PQ: aggiunto riferimento allTests.html

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -331,7 +331,7 @@ Vengono ora riassunti i risultati raggiunti per la fase RQ, usando le metriche p
 Dai dati si evince che la copertura \`e buona per quanto riguarda la logica interna e nei limiti previsti per l'interfaccia. Per quanto riguarda il lato server non sono tuttora presenti test, ma il problema verr\`a risolto entro l'RA. Il server \`e comunque minimale, e rappresenta solo una piccola frazione del codice totale.
 
 \paragrafo{Numero di test superati}
-Vengono superati 151 test su 151 su tutti i browser supportati.
+Vengono superati 151 test su 151 su tutti i browser supportati. Per maggiori dettagli, si apra il file \textit{src/test/allTests.html} con un browser supportato.
 
 \paragrafo{Numero di requisiti soddisfatti}
 Si faccia riferimento al tracciamento presente in \textit{DefinizioneDiProdotto.pdf}.
