MU: descrizione degli errori

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -597,9 +597,10 @@ Qui \`e stata selezionata la funzione di rotazione di un oggetto presente sul pi
 \sezione{Appendice}
  
 \subsezione{Messaggi di errore e loro significato}
-descrizione degli errori, dividendoli tra server e \underline{client}\\
-Errore di \underline{parsing} durante il caricamento di un file SVG.\\
-Errore di comunicazione col server. \\
-Errore interno del server (e.g. non c'e' piu' spazio su disco).\\
- 
+Durante l'utilizzo del programma \`e possibile che vengano segnalati i seguenti errori:
+\begin{elencopuntato}[\subsecindent]
+\item[-] \textit{Errore di \underline{parsing} durante il caricamento di un file SVG}: significa che il file SVG caricato non \`e valido.
+\item[-] \textit{Errore di comunicazione col server}: il server non \`e al momento raggiungibile. Riprovare pi\`u tardi, e se il problema persiste controllare lo stato della propria connessione ad internet. Se la connessione \`e funzionante, contattare l'amministratore del server.
+\item[-] \textit{Errore interno del server}: il server ha riscontrato un problema interno. Contattare l'amministratore del server.
+\end{elencopuntato} 
 \end{document}
